--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                     <i class="fa fa-caret-down"></i>
                 </button>                    
                 <div class="dropdown-content" id="NavDropdown">
-                    <a href="#">Web Design</a>
-                    <a href="#">Design Gráfico</a>
+                    <div class="wrap">
+                        <a href="#">Desenvolvimento Web</a>
+                        <a href="#">Design Gráfico</a>
+                    </div>
                 </div>
             </div>   
             <button href="" class="nav-button">Sobre</button>
@@ -32,8 +34,9 @@
     </nav>
 
 
-
-         
+    <!-- <svg height="300" width="500">
+        <path d="M 350 50 L 400 0 Q 400 0 450 50 C 500 50 450 50 700 50 C 700 50 750 50 750 100 C 750 250 750 300 750 550 C 750 600 700 600 700 600 L 100 600 C 50 600 50 550 50 550 C 50 300 50 300 50 100 C 50 50 100 50 100 50 Z"></path>
+    </svg> -->
 
     
 </body>
