--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button href="" class="nav-button resp">Início</button>
                 <div class="dropdown resp">
                     <button class="dropbtn nav-button" onclick="DropdownFunction()">
-                        Projetos
+                        Projetos &nbsp
                         <i class="fa fa-caret-down"></i>
                     </button>                    
                     <div class="dropdown-content" id="NavDropdown">
