--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
         <div class="ribbon"></div>
         <div class="navbar">
             <div class="navbar-content">
-                <div class="branding"></div>
+                <a class="branding" href="index.html"></a>
                 <div class="space-between"></div>
-                <a href="index.html" class="nav-button resp d-active">Início</a>
+                <a href="index.html" class="nav-button resp">Início</a>
                 <div class="dropdown resp">
                     <button class="dropbtn nav-button" onclick="DropdownFunction()">
                         Projetos &nbsp
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                 </div>   
-                <a href="about.html" class="nav-button resp">Sobre</a>
+                <a href="about.html" class="nav-button resp d-active">Sobre</a>
                 <div class="hide-menu">
                     <div class="resp-dropdown">
                         <div  class="resp-dropbtn" onclick="ResponsiveDropdownFunction()">
@@ -42,18 +42,18 @@
             </div>
             <div id="RespDropdown" class="resp-dropdown-content">
                 <div class="wrap">
-                    <a href="index.html" class="active">Início</a>
+                    <a href="index.html">Início</a>
                     <a href="dev-web.html">Desenvolvimento Web</a>
                     <a href="des-graf.html">Design Gráfico</a>
-                    <a href="about.html">Sobre</a>
+                    <a href="about.html" class="active">Sobre</a>
                 </div>
             </div>
         </div>
         <div class="ribbon"></div>
-    </nav>   
+    </nav>    
 
     <div class="teste" style="position: absolute; top: 50%; z-index: -1; font-size: 5rem; font-weight: bolder;">
-        INDEX
+        ABOUT
     </div>
 
 </body>
