--- a/dev-web.html
+++ b/dev-web.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/dev-web.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="shortcut icon" href="./imgs/Branding/favicon.png" type="image/x-icon">
@@ -52,8 +52,45 @@
         <div class="ribbon"></div>
     </nav>  
 
-    <div class="teste" style="position: absolute; top: 50%; z-index: -1; font-size: 5rem; font-weight: bolder;">
-        DEV WEB
+    <div class="body-content">
+        <div class="main-description">
+            <p><h1>Lorem ipsum dolor sit amet</h1></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel, ipsa beatae neque doloribus illo alias odio facere praesentium aspernatur totam harum aliquid ut inventore nihil id sunt culpa eaque.</p>
+        </div>
+    
+        <div class="projects-container">
+            <div class="row">
+
+                <div class="col">
+                    <div class="p-title bold">
+                        TITULO PROJETO
+                    </div>
+                    <div class="p-content item-01"></div>
+                </div>
+
+                <div class="col">
+                    <div class="p-title bold">
+                        TITULO PROJETO
+                    </div>
+                    <div class="p-content item-02"></div>
+                </div>
+
+                <div class="col">
+                    <div class="p-title bold">
+                        TITULO PROJETO
+                    </div>
+                    <div class="p-content item-03"></div>
+                </div>
+
+                <div class="col">
+                    <div class="p-title bold">
+                        TITULO PROJETO
+                    </div>
+                    <div class="p-content item-04"></div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
