commit-to-master

--- a/index.html
+++ b/index.html
@@ -3,58 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="shortcut icon" href="./imgs/Branding/favicon.png" type="image/x-icon">
-    <script src="js/dropdown.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <title>Matheus Cunha</title>
 </head>
 <body>
-    <nav>
-        <div class="ribbon"></div>
-        <div class="navbar">
-            <div class="navbar-content">
-                <div class="branding"></div>
-                <div class="space-between"></div>
-                <a href="index.html" class="nav-button resp d-active">Início</a>
-                <div class="dropdown resp">
-                    <button class="dropbtn nav-button" onclick="DropdownFunction()">
-                        Projetos &nbsp
-                        <i class="fa fa-caret-down"></i>
-                    </button>                    
-                    <div class="dropdown-content" id="NavDropdown">
-                        <div class="wrap">
-                            <a href="dev-web.html">Desenvolvimento Web</a>
-                            <a href="des-graf.html">Design Gráfico</a>
-                        </div>
-                    </div>
-                </div>   
-                <a href="about.html" class="nav-button resp">Sobre</a>
-                <div class="hide-menu">
-                    <div class="resp-dropdown">
-                        <div  class="resp-dropbtn" onclick="ResponsiveDropdownFunction()">
-                            <i class="fas fa-bars"></i>
-                        </div>
-                    </div> 
+    <div class="body-content-wrapper">
+        <div class="box-title">
+            <H1>
+                <div>
+                    EM
                 </div>
+                <div>
+                    CONSTRUÇÃO
+                </div>
+            </H1>
+        </div>
+        <div class="box-disclaimer">
+            PÁGINA EM DESENVOLVIMENTO
+        </div>
+        <div class="box-progress-bar">
+            <div class="progress-bar">
+                <div class="progress"></div>
             </div>
-            <div id="RespDropdown" class="resp-dropdown-content">
-                <div class="wrap">
-                    <a href="index.html" class="active">Início</a>
-                    <a href="dev-web.html">Desenvolvimento Web</a>
-                    <a href="des-graf.html">Design Gráfico</a>
-                    <a href="about.html">Sobre</a>
-                </div>
+            <div class="label">
+                <span class="first">0%</span>
+                <span class="last">100%</span>
             </div>
         </div>
-        <div class="ribbon"></div>
-    </nav>   
+        <div class="redes-sociais">
+            REDES SOCIAIS
+        </div>
 
-    <div class="teste" style="position: absolute; top: 50%; z-index: -1; font-size: 5rem; font-weight: bolder;">
-        INDEX
+        <div class="redes-sociais-box">
+            <a href="https://www.linkedin.com/in/matheus-cunha-sjc/">
+                <div class="icon-border">
+                    <div class="icon">
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </a>
+            <a href="https://github.com/matheus-cunha">
+                <div class="icon-border">
+                    <div class="icon">
+                        <i class="fab fa-git"></i>
+                    </div>
+                </div>
+            </a>
+            <a href="https://br.pinterest.com/portifoliomatheuscunha/">
+                <div class="icon-border">
+                    <div class="icon">
+                        <i class="fab fa-pinterest-p"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
-
+    <div class="background-white-color"></div>
 </body>
 </html>
