--- a/index.html
+++ b/index.html
@@ -8,44 +8,81 @@
     <title>Matheus Cunha</title>
 </head>
 <body>
+    <section id="hero">
+        <div class="hero-backdrop"></div>
+            <div class="hero-wrapper">
+                <div class="hero-name">
+                    <h1>
+                        Matheus Cunha 
+                        <p>Desenvolvedor Front-End</p>
+                    </h1>
+                </div>
+                <div class="hero-buttons">
+                    <a class="button" id="home" href="http://">
+                        Home
+                    </a>
+                    <a class="button" id="projects" href="http://">
+                        Projetos
+                    </a>
+                    <a class="button" id="contact" href="http://">
+                        Contato
+                    </a>
+                </div>
+                <div class="hero-content">
+                    <div class="hero-content-contact">
+                        Contato
+                        <a href="">
+                            <img src="./img/Icons/WhatsApp.svg" alt="" />
+                            Whatsapp
+                        </a>
+                        <a href="">
+                            <img src="./img/Icons/GitHub.svg" alt="" />
+                            GitHub
 
-    Matheus Cunha
-    Desenvolvedor Front-End
+                        </a>
+                        <a href="">
+                            <img src="./img/Icons/LinkedIn.svg" alt="" />
+                            LinkedIn
+                        </a>
+                        <a href="">
+                            <img src="./img/Icons/Pinterest.svg" alt="" />
+                            Pinterest
+                        </a>
+                    </div>
+                    <div class="hero-content-about">        
+                        <h2>
+                            Desenvolvimento Web - Programação de sites responsivos usando HTML, CSS e outras tecnologias.
+                            Para saber mais entre em contato.
+                        </h2>
+                    </div>
+                    <div class="markdown">
+                        @2023 - Matheus Cunha
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="projects">
+        Projetos
 
-    Home
-    Projetos
-    Contato
-
-    Contato
-    Whatsapp
-    GitHub
-    LinkedIn
-    Pinterest
-
-    Desenvolvimento Web - Programação de sites responsivos usando HTML, CSS e outras tecnologias.
-    Para saber mais entre em contato.
+        1
+        2
+        3
+        4
+        5
+        6
+        7
+        8
     
-    @2023 - Matheus Cunha
-
-    Projetos
-
-    1
-    2
-    3
-    4
-    5
-    6
-    7
-    8
-
-    Ver Mais
-
-    Matheus Cunha
-    +55 12 98265-8315
-    São José dos Campos - SP
-    matheus.cunha.sjcgmail.com
-
-    @2023 - Matheus Cunha - Todos os direitos reservados
+        Ver Mais
+    </section>
+    <footer>
+        Matheus Cunha
+        +55 12 98265-8315
+        São José dos Campos - SP
+        matheus.cunha.sjcgmail.com
+    
+        @2023 - Matheus Cunha - Todos os direitos reservados
+    </footer>
 </body>
 </html>
 
