--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             </div>
     </section>
     <section id="projects">
+        <div class="projects-wave">
+            <div class="wave-cyan"></div>
+            <div class="wave-violet"></div>
+            <div class="wave-heavenblue"></div>
+        </div>
         <div class="projects-content">
             Projetos
 
