Projects Card and animation Fixes

--- a/index.html
+++ b/index.html
@@ -68,18 +68,64 @@
             <div class="wave-heavenblue"></div>
         </div>
         <div class="projects-content">
-            Projetos
+            <div class="projects-title">
+                Projetos
+                <div class="projects-title-line"></div>
+            </div>
+            <div class="projects-table">
+                <div class="projects-row">
 
-            1
-            2
-            3
-            4
-            5
-            6
-            7
-            8
-        
-            Ver Mais
+                    <!-- ---------------------------------------------------------------- -->
+                    
+                    <div class="projects-item m" id="CardVistoAqui">
+                        <div class="card">
+                            <div class="card-logo" id="LogoCardVistoAqui"></div>
+                            <div class="card-icons">
+                                <div class="card-icon" id="IconHtml"></div>
+                                <div class="card-icon" id="IconCss"></div>
+                                <!-- <div class="card-icon" id="IconSass"></div> -->
+                                <!-- <div class="card-icon" id="IconJs"></div>                             -->
+                                <div class="card-icon" id="IconBootstrap"></div>
+                                <!-- <div class="card-icon" id="IconAngular"></div> -->
+                            </div>
+                        </div>
+                        <div class="card-overlay">
+                            VISTO AQUI
+                            <p>
+                                Landing page para captação de recursos e consumidores  
+                            </p>
+                            <a href="https://github.com/matheus-cunha/Visto-Aqui-Piloto" class="item-btn">Visite o projeto</a>
+                        </div>
+                    </div>
+
+                    <!-- ---------------------------------------------------------------- -->
+
+                    <div class="projects-item">
+                        2
+                    </div>
+                    <div class="projects-item">
+                        3
+                    </div>
+                    <div class="projects-item">
+                        4
+                    </div>
+                </div>
+                <div class="projects-row">
+                    <div class="projects-item m">
+                        5
+                    </div>
+                    <div class="projects-item">
+                        6
+                    </div>
+                    <div class="projects-item">
+                        7
+                    </div>
+                    <div class="projects-item">
+                        8
+                    </div>
+                </div>
+                <a href="https://github.com/matheus-cunha?tab=repositories">Ver mais</a>
+            </div>
         </div>
     </section>
     <footer id="footer">
