--- a/index.html
+++ b/index.html
@@ -74,41 +74,94 @@
             </div>
             <div class="projects-table">
                 <div class="projects-row">
-
-                    <!-- ---------------------------------------------------------------- -->
-                    
-                    <div class="projects-item m" id="CardVistoAqui">
+                    <!--1---------------------------------------------------------------- -->
+                    <div class="projects-item m" id="Card-1-1">
                         <div class="card">
-                            <div class="card-logo" id="LogoCardVistoAqui"></div>
+                            <div class="card-logo" id="LogoCard-1-1"></div>
                             <div class="card-icons">
-                                <div class="card-icon" id="IconHtml"></div>
-                                <div class="card-icon" id="IconCss"></div>
-                                <!-- <div class="card-icon" id="IconSass"></div> -->
-                                <!-- <div class="card-icon" id="IconJs"></div>                             -->
-                                <div class="card-icon" id="IconBootstrap"></div>
-                                <!-- <div class="card-icon" id="IconAngular"></div> -->
+                                <div class="card-icon IconHtml"></div>
+                                <div class="card-icon IconCss"></div>
+                                <!-- <div class="card-icon IconSass"></div> -->
+                                <!-- <div class="card-icon IconJs"></div>                             -->
+                                <div class="card-icon IconBootstrap"></div>
+                                <!-- <div class="card-icon IconAngular"></div> -->
                             </div>
                         </div>
-                        <div class="card-overlay">
+                        <a class="card-overlay" href="https://github.com/matheus-cunha/Visto-Aqui-Piloto">
                             VISTO AQUI
                             <p>
                                 Landing page para captação de recursos e consumidores  
                             </p>
-                            <a href="https://github.com/matheus-cunha/Visto-Aqui-Piloto" class="item-btn">Visite o projeto</a>
+                            <div class="item-btn">Visite o projeto</div>
+                        </a>
+                    </div>
+                    <!--2---------------------------------------------------------------- -->
+                    <div class="projects-item" id="Card-1-2">
+                        <div class="card">
+                            <div class="card-logo" id="LogoCard-1-2"></div>
+                            <div class="card-icons">
+                                <div class="card-icon IconHtml"></div>
+                                <div class="card-icon IconCss"></div>
+                                <!-- <div class="card-icon IconSass"></div> -->
+                                <div class="card-icon IconJs"></div>                            
+                                <!-- <div class="card-icon IconBootstrap"></div> -->
+                                <!-- <div class="card-icon IconAngular"></div> -->
+                            </div>
                         </div>
+                        <a class="card-overlay" href="https://github.com/matheus-cunha/landing-page">
+                            BLUE MOUNTAIN
+                            <p>
+                                Landing page para captação de recursos e consumidores  
+                            </p>
+                            <div class="item-btn">Visite o projeto</div>
+                        </a>
                     </div>
 
-                    <!-- ---------------------------------------------------------------- -->
+                    <!--3---------------------------------------------------------------- -->
+                    <div class="projects-item" id="Card-1-3">
+                        <div class="card">
+                            <div class="card-logo" id="LogoCard-1-3"></div>
+                            <div class="card-icons">
+                                <div class="card-icon IconHtml"></div>
+                                <div class="card-icon IconCss"></div>
+                                <!-- <div class="card-icon IconSass"></div> -->
+                                <!-- <div class="card-icon IconJs"></div>                             -->
+                                <!-- <div class="card-icon IconBootstrap"></div> -->
+                                <div class="card-icon IconAngular"></div>
+                            </div>
+                        </div>
+                        <a class="card-overlay" href="https://github.com/matheus-cunha/Visto-Aqui-Piloto">
+                            Chocobom 
+                            <p>
+                                Landing page para captação de recursos e consumidores  
+                            </p>
+                            <div class="item-btn">Visite o projeto</div>
+                        </a>
+                    </div>
 
-                    <div class="projects-item">
-                        2
+                    <!--4---------------------------------------------------------------- -->
+                    <div class="projects-item" id="Card-1-4">
+                        <div class="card">
+                            <div class="card-logo" id="LogoCard-1-4"></div>
+                            <div class="card-icons">
+                                <div class="card-icon IconHtml"></div>
+                                <div class="card-icon IconCss"></div>
+                                <!-- <div class="card-icon IconSass"></div> -->
+                                <!-- <div class="card-icon IconJs"></div>                             -->
+                                <!-- <div class="card-icon IconBootstrap"></div> -->
+                                <div class="card-icon IconAngular"></div>
+                            </div>
+                        </div>
+                        <a class="card-overlay" href="https://github.com/matheus-cunha/Tracking-system">
+                            DataChamp
+                            <p>
+                                Landing page para captação de recursos e consumidores  
+                            </p>
+                            <div class="item-btn">Visite o projeto</div>
+                        </a>
                     </div>
-                    <div class="projects-item">
-                        3
-                    </div>
-                    <div class="projects-item">
-                        4
-                    </div>
+
+                    <!--end 1st row---------------------------------------------------------------- -->
                 </div>
                 <div class="projects-row">
                     <div class="projects-item m">
